Added html template, with CSS and hover effects

--- a/index.html
+++ b/index.html
@@ -1,11 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Join</title>
+    <title>Page Template</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./style/mainframe.css">
+    <link rel="shortcut icon" href="./assets/icon/logo.svg">
 </head>
-<body>
-    
+
+<body class="body">
+    <aside class="sidebar">
+        <section class="logo-section">
+            <img class="logo" src="../assets/icon/logo.svg" alt="Join logo">
+        </section>
+        <nav class="sidebar-nav">
+            <a href="#" class="sidebar-nav-section">
+                <img class="nav-icons" src="./assets/icon/summary_icon.svg" alt="summary icon">
+                <p>Summary</p>
+            </a>
+            <a href="#" class="sidebar-nav-section">
+                <img class="nav-icons" src="./assets/icon/add_task_icon.svg" alt="Add Task icon">
+                <p>Add Task</p>
+            </a>
+            <a href="#" class="sidebar-nav-section">
+                <img class="nav-icons" src="./assets/icon/board_icon.svg" alt="Board icon">
+                <p>Board</p>
+            </a>
+            <a href="#" class="sidebar-nav-section">
+                <img class="nav-icons" src="./assets/icon/contacts_icon.svg" alt="Contacts icon">
+                <p>Contacts</p>
+            </a>
+
+        </nav>
+        <footer class="sidebar-footer">
+            <a href="#">Privacy Policy</a>
+            <a href="#">Legal notice</a>
+        </footer>
+    </aside>
+    <article>
+        <header class="header">
+            <nav class="header-nav">
+                <p>Kanban Project Management Tool</p>
+                <section class="header-side-buttons">
+                    <a href="#">
+                        <img src="./assets/icon/help.svg" alt="help icon">
+                    </a>
+                    <a href="#">
+                        <img src="./assets/icon/user_profile_initials.svg" alt="user icon">
+                    </a>
+                </section>
+            </nav>
+        </header>
+        <main class="main-content">
+        </main>
+    </article>
 </body>
+
 </html>
