fixed merge issues, reworked file structure

--- a/index.html
+++ b/index.html
@@ -5,31 +5,31 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Page Template</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./style/standard.css">
     <link rel="stylesheet" href="./style/mainframe.css">
-    <link rel="shortcut icon" href="./assets/icon/logo.svg">
+    <link rel="shortcut icon" href="./assets/icons/logo/logoSmall.svg">
 </head>
 
 <body class="body">
     <aside class="sidebar">
         <section class="logo-section">
-            <img class="logo" src="../assets/icon/logo.svg" alt="Join logo">
+            <img class="logo" src="./assets/icons/logo/logo_white.svg" alt="Join logo">
         </section>
         <nav class="sidebar-nav">
             <a href="#" class="sidebar-nav-section">
-                <img class="nav-icons" src="./assets/icon/summary_icon.svg" alt="summary icon">
+                <img class="nav-icons" src="./assets/icons/sideBar/summary.svg" alt="summary icon">
                 <p>Summary</p>
             </a>
             <a href="#" class="sidebar-nav-section">
-                <img class="nav-icons" src="./assets/icon/add_task_icon.svg" alt="Add Task icon">
+                <img class="nav-icons" src="./assets/icons/sideBar/addTask.svg" alt="Add Task icon">
                 <p>Add Task</p>
             </a>
             <a href="#" class="sidebar-nav-section">
-                <img class="nav-icons" src="./assets/icon/board_icon.svg" alt="Board icon">
+                <img class="nav-icons" src="./assets/icons/sideBar/board.svg" alt="Board icon">
                 <p>Board</p>
             </a>
             <a href="#" class="sidebar-nav-section">
-                <img class="nav-icons" src="./assets/icon/contacts_icon.svg" alt="Contacts icon">
+                <img class="nav-icons" src="./assets/icons/sideBar/contacts.svg" alt="Contacts icon">
                 <p>Contacts</p>
             </a>
 
@@ -45,10 +45,10 @@
                 <p>Kanban Project Management Tool</p>
                 <section class="header-side-buttons">
                     <a href="#">
-                        <img src="./assets/icon/help.svg" alt="help icon">
+                        <img src="./assets/icons/header/help.svg" alt="help icon">
                     </a>
                     <a href="#">
-                        <img src="./assets/icon/user_profile_initials.svg" alt="user icon">
+                        <img src="./assets/icons/header/user_placeholder.svg" alt="user icon">
                     </a>
                 </section>
             </nav>
