--- a/board.html
+++ b/board.html
@@ -71,25 +71,25 @@
                 </section>
                 <section class="table_header">
                     <div class="column_header">
-                        To do
+                        <p class="column_title">To do</p>
                         <button>
                             <img src="" alt="">
                         </button>
                     </div>
                     <div class="column_header">
-                        In progress
+                        <p class="column_title">In progress</p>
                         <button>
                             <img src="" alt="">
                         </button>
                     </div>
                     <div class="column_header">
-                        Await feedback
+                        <p class="column_title">Await feedback</p>
                         <button>
                             <img src="" alt="">
                         </button>
                     </div>
                     <div class="column_header">
-                        Done
+                        <p class="column_title">Done</p>
                         <button>
                             <img src="" alt="">
                         </button>
