style search task field

--- a/board.html
+++ b/board.html
@@ -60,7 +60,7 @@
                         <div class="search_task">
                             <input type="text">
                             <button>
-                                <img src="" alt="">
+                                <img src="./assets/icons/board/search_glas.svg" alt="">
                             </button>
                         </div>
                         <button class="add_task">
