update input field and style add task button

--- a/board.html
+++ b/board.html
@@ -58,14 +58,14 @@
                     <h1>Board</h1>
                     <div class="board_controls">
                         <div class="search_task">
-                            <input type="text">
+                            <input type="text" placeholder="Find Task" id="find_task">
                             <button>
                                 <img src="./assets/icons/board/search_glas.svg" alt="">
                             </button>
                         </div>
-                        <button class="add_task">
-                            Add task
-                            <img src="" alt="">
+                        <button class="button_add_task">
+                            <p>Add task</p>
+                            <img src="./assets/icons/board/add_white.svg" alt="add_task icon">
                         </button>
                     </div>
                 </section>
