style font color and button img of columns

--- a/board.html
+++ b/board.html
@@ -73,19 +73,19 @@
                     <div class="column_header">
                         <p class="column_title">To do</p>
                         <button>
-                            <img src="" alt="">
+                            <img src="./assets/icons/board/plus_boarder_var1.svg" alt="">
                         </button>
                     </div>
                     <div class="column_header">
                         <p class="column_title">In progress</p>
                         <button>
-                            <img src="" alt="">
+                            <img src="./assets/icons/board/plus_boarder_var1.svg" alt="">
                         </button>
                     </div>
                     <div class="column_header">
                         <p class="column_title">Await feedback</p>
                         <button>
-                            <img src="" alt="">
+                            <img src="./assets/icons/board/plus_boarder_var1.svg" alt="">
                         </button>
                     </div>
                     <div class="column_header">
