style board_table and fix respo. issue with calc of width for columns

--- a/board.html
+++ b/board.html
@@ -97,6 +97,10 @@
                 </section>
                 
                 <section class="board_table">
+                    <div class="column_content"></div>
+                    <div class="column_content"></div>
+                    <div class="column_content"></div>
+                    <div class="column_content"></div>
                     <!-- this section includes colums with state of tasks like "To do", "In Progress", "Await feedback", "Done" -->
                     <!-- beside tasks can move from one column to another by drag and drop -->
                     
