--- a/board.html
+++ b/board.html
@@ -90,14 +90,16 @@
                     </div>
                     <div class="column_header">
                         <p class="column_title">Done</p>
-                        <button>
-                            <img src="" alt="">
-                        </button>
                     </div>
                 </section>
                 
                 <section class="board_table">
-                    <div class="column_content"></div>
+                    <div class="column_content">
+                        das ist ein langer text um zu testen ob die spalte auch mit langen inhalten klar kommt und ob der text umbrechen tut wie gewünscht oder ob ich da noch was anpassen muss
+
+
+
+                    </div>
                     <div class="column_content"></div>
                     <div class="column_content"></div>
                     <div class="column_content"></div>
