update hover effect and backgroundcolor of active page in side navbar

--- a/board.html
+++ b/board.html
@@ -24,7 +24,7 @@
                 <img class="nav-icons" src="./assets/icons/sideBar/addTask.svg" alt="Add Task icon">
                 <p>Add Task</p>
             </a>
-            <a href="#" class="sidebar-nav-section">
+            <a href="#" class="sidebar-nav-section active">
                 <img class="nav-icons" src="./assets/icons/sideBar/board.svg" alt="Board icon">
                 <p>Board</p>
             </a>
