create a template function and a function to render field if no task. style field

--- a/board.html
+++ b/board.html
@@ -95,7 +95,7 @@
                 </section>
                 
                 <section class="board_table">
-                    <div class="column_content">
+                    <div class="column_content" id="toDoContainer">
                         das ist ein langer text um zu testen ob die spalte auch mit langen inhalten klar kommt und ob der text umbrechen tut wie gewünscht oder ob ich da noch was anpassen muss
 
 
@@ -110,6 +110,9 @@
                 </section>
         </main>
     </article>
+
+    <script src="./scripts/board_templates.js"></script>
+    <script src="./scripts/board.js"></script>
 </body>
 
 
