--- a/board.html
+++ b/board.html
@@ -101,7 +101,7 @@
 
 
                     </div>
-                    <div class="column_content"></div>
+                    <div class="column_content" id="inProgressContainer"></div>
                     <div class="column_content"></div>
                     <div class="column_content"></div>
                     <!-- this section includes colums with state of tasks like "To do", "In Progress", "Await feedback", "Done" -->
