move board and update refs

--- a/html/board.html
+++ b/html/board.html
@@ -4,33 +4,33 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Join Board</title>
-    <link rel="stylesheet" href="style/board_style.css">
-    <link rel="stylesheet" href="./style/standard.css">
-    <link rel="stylesheet" href="./style/mainframe.css">
-    <link rel="shortcut icon" href="./assets/icons/logo/logoSmall.svg">
+    <link rel="stylesheet" href="../style/board_style.css">
+    <link rel="stylesheet" href="../style/standard.css">
+    <link rel="stylesheet" href="../style/mainframe.css">
+    <link rel="shortcut icon" href="../assets/icons/logo/logoSmall.svg">
 </head>
 
 <body class="body">
     <aside class="sidebar">
         <div class="sidebar_upper_section">
             <section class="logo-section">
-                <img class="logo" src="./assets/icons/logo/logo_white.svg" alt="Join logo">
+                <img class="logo" src="../assets/icons/logo/logo_white.svg" alt="Join logo">
             </section>
             <nav class="sidebar-nav">
                 <a href="#" class="sidebar-nav-section">
-                    <img class="nav-icons" src="./assets/icons/sideBar/summary.svg" alt="summary icon">
+                    <img class="nav-icons" src="../assets/icons/sideBar/summary.svg" alt="summary icon">
                     <p>Summary</p>
                 </a>
                 <a href="#" class="sidebar-nav-section">
-                    <img class="nav-icons" src="./assets/icons/sideBar/addTask.svg" alt="Add Task icon">
+                    <img class="nav-icons" src="../assets/icons/sideBar/addTask.svg" alt="Add Task icon">
                     <p>Add Task</p>
                 </a>
                 <a href="#" class="sidebar-nav-section active">
-                    <img class="nav-icons" src="./assets/icons/sideBar/board.svg" alt="Board icon">
+                    <img class="nav-icons" src="../assets/icons/sideBar/board.svg" alt="Board icon">
                     <p>Board</p>
                 </a>
                 <a href="#" class="sidebar-nav-section">
-                    <img class="nav-icons" src="./assets/icons/sideBar/contacts.svg" alt="Contacts icon">
+                    <img class="nav-icons" src="../assets/icons/sideBar/contacts.svg" alt="Contacts icon">
                     <p>Contacts</p>
                 </a>
             </nav>
@@ -46,10 +46,10 @@
                 <p>Kanban Project Management Tool</p>
                 <section class="header-side-buttons">
                     <a href="#">
-                        <img src="./assets/icons/header/help.svg" alt="help icon">
+                        <img src="../assets/icons/header/help.svg" alt="help icon">
                     </a>
                     <a href="#">
-                        <img src="./assets/icons/header/user_placeholder.svg" alt="user icon">
+                        <img src="../assets/icons/header/user_placeholder.svg" alt="user icon">
                     </a>
                 </section>
             </nav>
@@ -61,12 +61,12 @@
                         <div class="search_task">
                             <input type="text" placeholder="Find Task" id="find_task">
                             <button>
-                                <img src="./assets/icons/board/search_glas.svg" alt="">
+                                <img src="../assets/icons/board/search_glas.svg" alt="">
                             </button>
                         </div>
                         <button class="button_add_task">
                             <p>Add task</p>
-                            <img src="./assets/icons/board/add_white.svg" alt="add_task icon">
+                            <img src="../assets/icons/board/add_white.svg" alt="add_task icon">
                         </button>
                     </div>
                 </section>
@@ -74,19 +74,19 @@
                     <div class="column_header">
                         <p class="column_title">To do</p>
                         <button>
-                            <img src="./assets/icons/board/plus_boarder_var1.svg" alt="">
+                            <img src="../assets/icons/board/plus_boarder_var1.svg" alt="">
                         </button>
                     </div>
                     <div class="column_header">
                         <p class="column_title">In progress</p>
                         <button>
-                            <img src="./assets/icons/board/plus_boarder_var1.svg" alt="">
+                            <img src="../assets/icons/board/plus_boarder_var1.svg" alt="">
                         </button>
                     </div>
                     <div class="column_header">
                         <p class="column_title">Await feedback</p>
                         <button>
-                            <img src="./assets/icons/board/plus_boarder_var1.svg" alt="">
+                            <img src="../assets/icons/board/plus_boarder_var1.svg" alt="">
                         </button>
                     </div>
                     <div class="column_header">
@@ -111,8 +111,8 @@
         </main>
     </article>
 
-    <script src="./scripts/board_templates.js"></script>
-    <script src="./scripts/board.js"></script>
+    <script src="../scripts/board_templates.js"></script>
+    <script src="../scripts/board.js"></script>
 </body>
 
 
