--- a/html/board.html
+++ b/html/board.html
@@ -95,18 +95,10 @@
                 </section>
                 
                 <section class="board_table">
-                    <div class="column_content" id="toDoContainer">
-                        das ist ein langer text um zu testen ob die spalte auch mit langen inhalten klar kommt und ob der text umbrechen tut wie gewünscht oder ob ich da noch was anpassen muss
-
-
-
-                    </div>
-                    <div class="column_content" id="inProgressContainer"></div>
-                    <div class="column_content"></div>
-                    <div class="column_content"></div>
-                    <!-- this section includes colums with state of tasks like "To do", "In Progress", "Await feedback", "Done" -->
-                    <!-- beside tasks can move from one column to another by drag and drop -->
-                    
+                    <div class="column_content" id="toDoColumn" ondrop="dropHandler(event)" ondragover="dragOverHandler(event)"></div>
+                    <div class="column_content" id="inProgressColumn" ondrop="dropHandler(event)" ondragover="dragOverHandler(event)"></div>
+                    <div class="column_content" id="awaitFeedbackColumn" ondrop="dropHandler(event)" ondragover="dragOverHandler(event)"></div>
+                    <div class="column_content" id="doneColumn" ondrop="dropHandler(event)" ondragover="dragOverHandler(event)"></div>                    
                 </section>
         </main>
     </article>
