--- a/html/add_task.html
+++ b/html/add_task.html
@@ -13,28 +13,30 @@
 
 <body class="body">
     <aside class="sidebar">
-        <section class="logo-section">
-            <img class="logo" src="../assets/icons/logo/logo_white.svg" alt="Join logo">
-        </section>
-        <nav class="sidebar-nav">
-            <a href="#" class="sidebar-nav-section">
-                <img class="nav-icons" src="../assets/icons/sideBar/summary.svg" alt="summary icon">
-                <p>Summary</p>
-            </a>
-            <a href="#" class="sidebar-nav-section current-selection">
-                <img class="nav-icons" src="../assets/icons/sideBar/addTask.svg" alt="Add Task icon">
-                <p>Add Task</p>
-            </a>
-            <a href="#" class="sidebar-nav-section">
-                <img class="nav-icons" src="../assets/icons/sideBar/board.svg" alt="Board icon">
-                <p>Board</p>
-            </a>
-            <a href="#" class="sidebar-nav-section">
-                <img class="nav-icons" src="../assets/icons/sideBar/contacts.svg" alt="Contacts icon">
-                <p>Contacts</p>
-            </a>
+        <div class="sidebar_upper_section">
+            <section class="logo-section">
+                <img class="logo" src="../assets/icons/logo/logo_white.svg" alt="Join logo">
+            </section>
+            <nav class="sidebar-nav">
+                <a href="#" class="sidebar-nav-section">
+                    <img class="nav-icons" src="../assets/icons/sideBar/summary.svg" alt="summary icon">
+                    <p>Summary</p>
+                </a>
+                <a href="#" class="sidebar-nav-section current-selection">
+                    <img class="nav-icons" src="../assets/icons/sideBar/addTask.svg" alt="Add Task icon">
+                    <p>Add Task</p>
+                </a>
+                <a href="#" class="sidebar-nav-section">
+                    <img class="nav-icons" src="../assets/icons/sideBar/board.svg" alt="Board icon">
+                    <p>Board</p>
+                </a>
+                <a href="#" class="sidebar-nav-section">
+                    <img class="nav-icons" src="../assets/icons/sideBar/contacts.svg" alt="Contacts icon">
+                    <p>Contacts</p>
+                </a>
 
-        </nav>
+            </nav>
+        </div>
         <footer class="sidebar-footer">
             <a href="#">Privacy Policy</a>
             <a href="#">Legal notice</a>
@@ -60,14 +62,14 @@
                     <h1 class="h1">Add Task</h1>
                 </header>
                 <main class="task-details">
-                    <section>
+                    <section class="task-detail-container">
                         <form class="input-form">
                             <label>Title<span class="required">*</span></label>
                             <input class="task-input" type="text" placeholder="Enter a title">
                         </form>
                         <form class="input-form">
                             <label>Description</label>
-                            <input class="task-input" type="text" placeholder="Enter a description">
+                            <input class="task-input description-input" type="text" placeholder="Enter a description">
                         </form>
                         <form class="input-form">
                             <label>Due date<span class="required">*</span></label>
@@ -75,7 +77,7 @@
                         </form>
                     </section>
                     <section class="seperator"></section>
-                    <section>
+                    <section class="task-detail-container">
                         <form class="input-form">
                             <label>Priority<span class="required">*</span></label>
                             <section class="priority-section">
@@ -112,7 +114,7 @@
                         <p>Clear</p>
                         <img src="../assets/icons/contacts/close.svg" alt="clear icon">
                     </button>
-                    <button class="action-buttons">
+                    <button class="action-buttons create-button">
                         <p>Create Task</p>
                         <img src="../assets/icons/contacts/check.svg" alt="sumbit icon">
                     </button>
