description width now automatic

--- a/html/add_task.html
+++ b/html/add_task.html
@@ -67,9 +67,9 @@
                             <label>Title<span class="required">*</span></label>
                             <input class="task-input" type="text" placeholder="Enter a title">
                         </form>
-                        <form class="input-form">
+                        <form class="input-form description">
                             <label>Description</label>
-                            <input class="task-input description-input" type="text" placeholder="Enter a description">
+                            <input class="task-input description" type="text" placeholder="Enter a description">
                         </form>
                         <form class="input-form">
                             <label>Due date<span class="required">*</span></label>
@@ -97,11 +97,11 @@
                         </form>
                         <form class="input-form">
                             <label>Assigned to</label>
-                            <select name="" id=""></select>
+                            <select class="select-input" name="" id=""></select>
                         </form>
                         <form class="input-form">
                             <label>Category<span class="required">*</span></label>
-                            <select name="" id=""></select>
+                            <select class="select-input" name="" id=""></select>
                         </form>
                         <form class="input-form">
                             <label>Subtask</label>
