--- a/html/add_task.html
+++ b/html/add_task.html
@@ -110,14 +110,19 @@
                     </section>
                 </main>
                 <aside class="action-button-section">
-                    <button class="action-buttons">
-                        <p>Clear</p>
-                        <img src="../assets/icons/contacts/close.svg" alt="clear icon">
-                    </button>
-                    <button class="action-buttons create-button">
-                        <p>Create Task</p>
-                        <img src="../assets/icons/contacts/check.svg" alt="sumbit icon">
-                    </button>
+                    <section>
+                        <p class="required-text"><span class="required">*</span>This field is required</p>
+                    </section>
+                    <section class="button-section">
+                        <button class="action-buttons">
+                            <p>Clear</p>
+                            <img src="../assets/icons/contacts/close.svg" alt="clear icon">
+                        </button>
+                        <button class="action-buttons create-button">
+                            <p>Create Task</p>
+                            <img src="../assets/icons/contacts/check.svg" alt="sumbit icon">
+                        </button>
+                    </section>
                 </aside>
             </article>
         </main>
