added hover effetcs to action buttons

--- a/html/add_task.html
+++ b/html/add_task.html
@@ -114,14 +114,18 @@
                         <p class="required-text"><span class="required">*</span>This field is required</p>
                     </section>
                     <section class="button-section">
-                        <button class="action-buttons">
-                            <p>Clear</p>
-                            <img src="../assets/icons/contacts/close.svg" alt="clear icon">
-                        </button>
-                        <button class="action-buttons create-button">
-                            <p>Create Task</p>
-                            <img src="../assets/icons/contacts/check.svg" alt="sumbit icon">
-                        </button>
+                        <div class="clear-button">
+                            <button class="action-buttons">
+                                <p>Clear</p>
+                                <img src="../assets/icons/contacts/close.svg" alt="clear icon">
+                            </button>
+                        </div>
+                        <div class="create-task">
+                            <button class="action-buttons create-button">
+                                <p>Create Task</p>
+                                <img src="../assets/icons/contacts/check.svg" alt="sumbit icon">
+                            </button>
+                        </div>
                     </section>
                 </aside>
             </article>
