--- a/index.html
+++ b/index.html
@@ -12,28 +12,30 @@
 
 <body class="body">
     <aside class="sidebar">
-        <section class="logo-section">
-            <img class="logo" src="./assets/icons/logo/logo_white.svg" alt="Join logo">
-        </section>
-        <nav class="sidebar-nav">
-            <a href="#" class="sidebar-nav-section">
-                <img class="nav-icons" src="./assets/icons/sideBar/summary.svg" alt="summary icon">
-                <p>Summary</p>
-            </a>
-            <a href="#" class="sidebar-nav-section">
-                <img class="nav-icons" src="./assets/icons/sideBar/addTask.svg" alt="Add Task icon">
-                <p>Add Task</p>
-            </a>
-            <a href="#" class="sidebar-nav-section">
-                <img class="nav-icons" src="./assets/icons/sideBar/board.svg" alt="Board icon">
-                <p>Board</p>
-            </a>
-            <a href="#" class="sidebar-nav-section">
-                <img class="nav-icons" src="./assets/icons/sideBar/contacts.svg" alt="Contacts icon">
-                <p>Contacts</p>
-            </a>
+        <div class="sidebar_upper_section">
+            <section class="logo-section">
+                <img class="logo" src="./assets/icons/logo/logo_white.svg" alt="Join logo">
+            </section>
+            <nav class="sidebar-nav">
+                <a href="#" class="sidebar-nav-section">
+                    <img class="nav-icons" src="./assets/icons/sideBar/summary.svg" alt="summary icon">
+                    <p>Summary</p>
+                </a>
+                <a href="#" class="sidebar-nav-section">
+                    <img class="nav-icons" src="./assets/icons/sideBar/addTask.svg" alt="Add Task icon">
+                    <p>Add Task</p>
+                </a>
+                <a href="#" class="sidebar-nav-section">
+                    <img class="nav-icons" src="./assets/icons/sideBar/board.svg" alt="Board icon">
+                    <p>Board</p>
+                </a>
+                <a href="/contacts.html" class="sidebar-nav-section">
+                    <img class="nav-icons" src="./assets/icons/sideBar/contacts.svg" alt="Contacts icon">
+                    <p>Contacts</p>
+                </a>
 
-        </nav>
+            </nav>
+        </div>
         <footer class="sidebar-footer">
             <a href="#">Privacy Policy</a>
             <a href="#">Legal notice</a>
