added events to buttons

--- a/html/add_task.html
+++ b/html/add_task.html
@@ -81,15 +81,15 @@
                         <form class="input-form">
                             <label for="priority_section">Priority<span class="required">*</span></label>
                             <section class="priority-section" id="priority_section">
-                                <button class="priority-button">
+                                <button class="priority-button" id="button_prio_urgent" onclick="changePriority(urgent)">
                                     <p>Urgent</p>
                                     <img src="../assets/icons/addTask/urgentTask.svg" alt="urgent prio icon">
                                 </button>
-                                <button class="priority-button bg-yellow">
+                                <button class="priority-button bg-yellow" id="button_prio_medium" onclick="changePriority(medium)">
                                     <p>Medium</p>
                                     <img src="../assets/icons/addTask/medTask.svg" alt="medium prio icon">
                                 </button>
-                                <button class="priority-button">
+                                <button class="priority-button" id="button_prio_low" onclick="changePriority(low)">
                                     <p>Low</p>
                                     <img src="../assets/icons/addTask/lowTask.svg" alt="low prio icon">
                                 </button>
@@ -105,6 +105,8 @@
                             <label for="task_category">Category<span class="required">*</span></label>
                             <select class="select-input" name="" id="task_category">
                                 <option value="">Select task category</option>
+                                <option value="">Technical Task</option>
+                                <option value="">User Story</option>
                             </select>
                         </form>
                         <form class="input-form">
@@ -119,13 +121,13 @@
                     </section>
                     <section class="button-section">
                         <div class="clear-button">
-                            <button class="action-buttons">
+                            <button class="action-buttons" onclick="clearAllInputs()">
                                 <p>Clear</p>
                                 <img src="../assets/icons/contacts/close.svg" alt="clear icon">
                             </button>
                         </div>
                         <div class="create-task">
-                            <button class="action-buttons create-button">
+                            <button class="action-buttons create-button" onclick="createTask()">
                                 <p>Create Task</p>
                                 <img src="../assets/icons/contacts/check.svg" alt="sumbit icon">
                             </button>
