fixed: - changed filebase

--- a/html/contacts.html
+++ b/html/contacts.html
@@ -9,30 +9,30 @@
     <link rel="stylesheet" href="./style/standard.css">
     <link rel="stylesheet" href="./style/mainframe.css">
     <link rel="shortcut icon" href="./assets/icons/logo/logoSmall.svg">
-    <link rel="stylesheet" href="style/board_style.css">s
+    <link rel="stylesheet" href="style/board_style.css">
 </head>
 
 <body class="body">
     <aside class="sidebar">
         <div class="sidebar_upper_section">
             <section class="logo-section">
-                <img class="logo" src="./assets/icons/logo/logo_white.svg" alt="Join logo">
+                <img class="logo" src="../assets/icons/logo/logo_white.svg" alt="Join logo">
             </section>
             <nav class="sidebar-nav">
                 <a href="#" class="sidebar-nav-section">
-                    <img class="nav-icons" src="./assets/icons/sideBar/summary.svg" alt="summary icon">
+                    <img class="nav-icons" src="../assets/icons/sideBar/summary.svg" alt="summary icon">
                     <p>Summary</p>
                 </a>
                 <a href="#" class="sidebar-nav-section">
-                    <img class="nav-icons" src="./assets/icons/sideBar/addTask.svg" alt="Add Task icon">
+                    <img class="nav-icons" src="../assets/icons/sideBar/addTask.svg" alt="Add Task icon">
                     <p>Add Task</p>
                 </a>
                 <a href="#" class="sidebar-nav-section">
-                    <img class="nav-icons" src="./assets/icons/sideBar/board.svg" alt="Board icon">
+                    <img class="nav-icons" src="../assets/icons/sideBar/board.svg" alt="Board icon">
                     <p>Board</p>
                 </a>
                 <a href="#" class="sidebar-nav-section">
-                    <img class="nav-icons" src="./assets/icons/sideBar/contacts.svg" alt="Contacts icon">
+                    <img class="nav-icons" src="../assets/icons/sideBar/contacts.svg" alt="Contacts icon">
                     <p>Contacts</p>
                 </a>
 
@@ -49,10 +49,10 @@
                 <p>Kanban Project Management Tool</p>
                 <section class="header-side-buttons">
                     <a href="#">
-                        <img src="./assets/icons/header/help.svg" alt="help icon">
+                        <img src="../assets/icons/header/help.svg" alt="help icon">
                     </a>
                     <a href="#">
-                        <img src="./assets/icons/header/user_placeholder.svg" alt="user icon">
+                        <img src="../assets/icons/header/user_placeholder.svg" alt="user icon">
                     </a>
                 </section>
             </nav>
@@ -62,7 +62,7 @@
                 <div>
                     <button class="button_add_task add-contact-btn">
                         <p>Add new contact</p>
-                        <img src="./assets/icons/contacts/person_add.svg" alt="add_person icon">
+                        <img src="../assets/icons/contacts/person_add.svg" alt="add_person icon">
                     </button>
                 </div>
                 <div class="contact-list">
