--- a/html/contacts.html
+++ b/html/contacts.html
@@ -5,11 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contacts</title>
-    <link rel="stylesheet" href="style/contacts.css">
-    <link rel="stylesheet" href="./style/standard.css">
-    <link rel="stylesheet" href="./style/mainframe.css">
-    <link rel="shortcut icon" href="./assets/icons/logo/logoSmall.svg">
-    <link rel="stylesheet" href="style/board_style.css">
+    <link rel="stylesheet" href="../style/contacts.css">
+    <link rel="stylesheet" href="../style/standard.css">
+    <link rel="stylesheet" href="../style/mainframe.css">
+    <link rel="shortcut icon" href="../assets/icons/logo/logoSmall.svg">
+    <link rel="stylesheet" href="../style/board_style.css">
 </head>
 
 <body class="body">
