user can now change task priority code and visual wise

--- a/html/add_task.html
+++ b/html/add_task.html
@@ -81,15 +81,15 @@
                         <form class="input-form">
                             <label for="priority_section">Priority<span class="required">*</span></label>
                             <section class="priority-section" id="priority_section">
-                                <button class="priority-button" id="button_prio_urgent" onclick="changePriority(urgent)">
+                                <button class="priority-button" id="button_prio_urgent" onclick="changePriority('urgent')" type="button">
                                     <p>Urgent</p>
                                     <img src="../assets/icons/addTask/urgentTask.svg" alt="urgent prio icon">
                                 </button>
-                                <button class="priority-button bg-yellow" id="button_prio_medium" onclick="changePriority(medium)">
+                                <button class="priority-button bg-yellow" id="button_prio_medium" onclick="changePriority('medium')" type="button">
                                     <p>Medium</p>
                                     <img src="../assets/icons/addTask/medTask.svg" alt="medium prio icon">
                                 </button>
-                                <button class="priority-button" id="button_prio_low" onclick="changePriority(low)">
+                                <button class="priority-button" id="button_prio_low" onclick="changePriority('low')" type="button">
                                     <p>Low</p>
                                     <img src="../assets/icons/addTask/lowTask.svg" alt="low prio icon">
                                 </button>
