--- a/html/contacts.html
+++ b/html/contacts.html
@@ -31,7 +31,7 @@
                     <img class="nav-icons" src="../assets/icons/sideBar/board.svg" alt="Board icon">
                     <p>Board</p>
                 </a>
-                <a href="#" class="sidebar-nav-section">
+                <a href="#" class="sidebar-nav-section active">
                     <img class="nav-icons" src="../assets/icons/sideBar/contacts.svg" alt="Contacts icon">
                     <p>Contacts</p>
                 </a>
