--- a/html/board.html
+++ b/html/board.html
@@ -55,51 +55,55 @@
             </nav>
         </header>
         <main class="main-content">
-                <section class="board_menu">
-                    <h1>Board</h1>
-                    <div class="board_controls">
-                        <div class="search_task">
-                            <input type="text" placeholder="Find Task" id="find_task">
-                            <button>
-                                <img src="../assets/icons/board/search_glas.svg" alt="">
-                            </button>
-                        </div>
-                        <button class="button_add_task">
-                            <p>Add task</p>
-                            <img src="../assets/icons/board/add_white.svg" alt="add_task icon">
-                        </button>
-                    </div>
-                </section>
-                <section class="table_header">
-                    <div class="column_header">
-                        <p class="column_title">To do</p>
+            <div id="overlay" class="overlay">
+                <div class="overlay_content">
+
+                </div>
+            </div>
+            <section class="board_menu">
+                <h1>Board</h1>
+                <div class="board_controls">
+                    <div class="search_task">
+                        <input type="text" placeholder="Find Task" id="find_task">
                         <button>
-                            <img src="../assets/icons/board/plus_boarder_var1.svg" alt="">
+                            <img src="../assets/icons/board/search_glas.svg" alt="">
                         </button>
                     </div>
-                    <div class="column_header">
-                        <p class="column_title">In progress</p>
-                        <button>
-                            <img src="../assets/icons/board/plus_boarder_var1.svg" alt="">
-                        </button>
-                    </div>
-                    <div class="column_header">
-                        <p class="column_title">Await feedback</p>
-                        <button>
-                            <img src="../assets/icons/board/plus_boarder_var1.svg" alt="">
-                        </button>
-                    </div>
-                    <div class="column_header">
-                        <p class="column_title">Done</p>
-                    </div>
-                </section>
-                
-                <section class="board_table">
-                    <div class="column_content" id="toDoColumn" ondrop="dropHandler(event)" ondragover="dragOverHandler(event)"></div>
-                    <div class="column_content" id="inProgressColumn" ondrop="dropHandler(event)" ondragover="dragOverHandler(event)"></div>
-                    <div class="column_content" id="awaitFeedbackColumn" ondrop="dropHandler(event)" ondragover="dragOverHandler(event)"></div>
-                    <div class="column_content" id="doneColumn" ondrop="dropHandler(event)" ondragover="dragOverHandler(event)"></div>                    
-                </section>
+                    <button class="button_add_task">
+                        <p>Add task</p>
+                        <img src="../assets/icons/board/add_white.svg" alt="add_task icon">
+                    </button>
+                </div>
+            </section>
+            <section class="table_header">
+                <div class="column_header">
+                    <p class="column_title">To do</p>
+                    <button>
+                        <img src="../assets/icons/board/plus_boarder_var1.svg" alt="">
+                    </button>
+                </div>
+                <div class="column_header">
+                    <p class="column_title">In progress</p>
+                    <button>
+                        <img src="../assets/icons/board/plus_boarder_var1.svg" alt="">
+                    </button>
+                </div>
+                <div class="column_header">
+                    <p class="column_title">Await feedback</p>
+                    <button>
+                        <img src="../assets/icons/board/plus_boarder_var1.svg" alt="">
+                    </button>
+                </div>
+                <div class="column_header">
+                    <p class="column_title">Done</p>
+                </div>
+            </section>
+            <section class="board_table">
+                <div class="column_content" id="toDoColumn" ondrop="dropHandler(event)" ondragover="dragOverHandler(event)"></div>
+                <div class="column_content" id="inProgressColumn" ondrop="dropHandler(event)" ondragover="dragOverHandler(event)"></div>
+                <div class="column_content" id="awaitFeedbackColumn" ondrop="dropHandler(event)" ondragover="dragOverHandler(event)"></div>
+                <div class="column_content" id="doneColumn" ondrop="dropHandler(event)" ondragover="dragOverHandler(event)"></div>                    
+            </section>
         </main>
     </article>
 
