--- a/html/board.html
+++ b/html/board.html
@@ -56,9 +56,7 @@
         </header>
         <main class="main-content">
             <div id="overlay" class="overlay">
-                <div class="overlay_content">
-
-                </div>
+                <div id="overlay_content" class="overlay_content"></div>
             </div>
             <section class="board_menu">
                 <h1>Board</h1>
