--- a/html/board.html
+++ b/html/board.html
@@ -55,7 +55,7 @@
             </nav>
         </header>
         <main class="main-content">
-            <div id="overlay" class="overlay">
+            <div id="overlay" class="overlay" onclick="closeOverlay(event)">
                 <div id="overlay_content" class="overlay_content"></div>
             </div>
             <section class="board_menu">
