fix: - added style for contact display header

--- a/html/contacts.html
+++ b/html/contacts.html
@@ -199,11 +199,12 @@
                 </div>
             </aside>
             <section class="contact-display">
-                <div>
+                <div class="contact-header">
                     <h1>Contacts</h1>
-                    <div></div>
-                    <span>Better with a team</span>
+                    <div class="seperator-vertical"></div>
+                    <span class="contact-sub">Better with a team</span>
                 </div>
+                
             </section>
         </main>
     </article>
