--- a/html/contacts.html
+++ b/html/contacts.html
@@ -204,7 +204,27 @@
                     <div class="seperator-vertical"></div>
                     <span class="contact-sub">Better with a team</span>
                 </div>
-                
+                <article class="contact-main-view">
+                    <div class="main-name">
+                        <div class="two-letter-name"></div>
+                        <div class="name-field">
+                            <p class="fullname"></p>
+                            <div>
+                                <button><img src="../assets/icons/contacts/edit.svg" alt="edit contact">Edit</button>
+                                <button><img src="../assets/icons/contacts/delete.svg" alt="delete Contact">Delete</button>
+                            </div>
+                        </div>
+                    </div>
+                    <span>Contact Information</span>
+                    <div class="mail-display">
+                        <p>Email</p>
+                        <span>Placeholder Mail</span>
+                    </div>
+                    <div class="phone-display">
+                        <p>Phone</p>
+                        <span>Placeholder Number</span>
+                    </div>
+                </article>
             </section>
         </main>
     </article>
