feat: - added style for main view html

--- a/html/contacts.html
+++ b/html/contacts.html
@@ -206,22 +206,22 @@
                 </div>
                 <article class="contact-main-view">
                     <div class="main-name">
-                        <div class="two-letter-name"></div>
+                        <div class="two-letter-name fullname">AR</div>
                         <div class="name-field">
-                            <p class="fullname"></p>
-                            <div>
-                                <button><img src="../assets/icons/contacts/edit.svg" alt="edit contact">Edit</button>
-                                <button><img src="../assets/icons/contacts/delete.svg" alt="delete Contact">Delete</button>
+                            <p class="fullname">Name Placeholder</p>
+                            <div class="main-name-btns">
+                                <button class="name-btn"><img src="../assets/icons/contacts/edit.svg" alt="edit contact">Edit</button>
+                                <button class="name-btn"><img src="../assets/icons/contacts/delete.svg" alt="delete Contact">Delete</button>
                             </div>
                         </div>
                     </div>
-                    <span>Contact Information</span>
-                    <div class="mail-display">
-                        <p>Email</p>
+                    <span class="sub-header-information">Contact Information</span>
+                    <div class="info-display">
+                        <p class="info-text">Email</p>
                         <span>Placeholder Mail</span>
                     </div>
-                    <div class="phone-display">
-                        <p>Phone</p>
+                    <div class="info-display">
+                        <p class="info-text">Phone</p>
                         <span>Placeholder Number</span>
                     </div>
                 </article>
