fix: added id to main View for later js use

--- a/html/contacts.html
+++ b/html/contacts.html
@@ -204,14 +204,16 @@
                     <div class="seperator-vertical"></div>
                     <span class="contact-sub">Better with a team</span>
                 </div>
-                <article class="contact-main-view">
+                <article id="mainView" class="contact-main-view">
                     <div class="main-name">
                         <div class="two-letter-name fullname">AR</div>
                         <div class="name-field">
                             <p class="fullname">Name Placeholder</p>
                             <div class="main-name-btns">
-                                <button class="name-btn"><img src="../assets/icons/contacts/edit.svg" alt="edit contact">Edit</button>
-                                <button class="name-btn"><img src="../assets/icons/contacts/delete.svg" alt="delete Contact">Delete</button>
+                                <button class="name-btn"><img src="../assets/icons/contacts/edit.svg"
+                                        alt="edit contact">Edit</button>
+                                <button class="name-btn"><img src="../assets/icons/contacts/delete.svg"
+                                        alt="delete Contact">Delete</button>
                             </div>
                         </div>
                     </div>
