linked add task and board html

--- a/html/add_task.html
+++ b/html/add_task.html
@@ -22,11 +22,11 @@
                     <img class="nav-icons" src="../assets/icons/sideBar/summary.svg" alt="summary icon">
                     <p>Summary</p>
                 </a>
-                <a href="#" class="sidebar-nav-section current-selection">
+                <a href="./add_task.html" class="sidebar-nav-section current-selection">
                     <img class="nav-icons" src="../assets/icons/sideBar/addTask.svg" alt="Add Task icon">
                     <p>Add Task</p>
                 </a>
-                <a href="#" class="sidebar-nav-section">
+                <a href="./board.html" class="sidebar-nav-section">
                     <img class="nav-icons" src="../assets/icons/sideBar/board.svg" alt="Board icon">
                     <p>Board</p>
                 </a>
