--- a/html/add_task.html
+++ b/html/add_task.html
@@ -66,6 +66,7 @@
                         <form class="input-form">
                             <label for="task_title">Title<span class="required">*</span></label>
                             <input id="task_title" class="task-input" type="text" placeholder="Enter a title">
+                            <p id="required_title" class="required-info">This field is required</p>
                         </form>
                         <form class="input-form description">
                             <label for="task_description">Description</label>
@@ -74,12 +75,13 @@
                         <form class="input-form">
                             <label for="task_due_date">Due date<span class="required">*</span></label>
                             <input id="task_due_date" class="task-input" type="date" placeholder="dd/mm/yyyy">
+                            <p id="required-date" class="required-info">This field is required</p>
                         </form>
                     </section>
                     <section class="seperator"></section>
                     <section class="task-detail-container">
                         <form class="input-form">
-                            <label for="priority_section">Priority<span class="required">*</span></label>
+                            <label for="priority_section">Priority</label>
                             <section class="priority-section" id="priority_section">
                                 <button class="priority-button" id="button_prio_urgent" onclick="changePriority('urgent')" type="button">
                                     <p>Urgent</p>
@@ -108,6 +110,7 @@
                                 <option value="">Technical Task</option>
                                 <option value="">User Story</option>
                             </select>
+                            <p id="required_category" class="required-info">This field is required</p>
                         </form>
                         <form class="input-form">
                             <label for="task_subtask">Subtask</label>
