--- a/html/add_task.html
+++ b/html/add_task.html
@@ -75,7 +75,7 @@
                         <form class="input-form">
                             <label for="task_due_date">Due date<span class="required">*</span></label>
                             <input id="task_due_date" class="task-input" type="date" placeholder="dd/mm/yyyy">
-                            <p id="required-date" class="required-info">This field is required</p>
+                            <p id="required_date" class="required-info">This field is required</p>
                         </form>
                     </section>
                     <section class="seperator"></section>
