--- a/html/board.html
+++ b/html/board.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Join Board</title>
+    <link rel="stylesheet" href="../style/add_task.css">
     <link rel="stylesheet" href="../style/board_style.css">
     <link rel="stylesheet" href="../style/board_overlay_style.css">
     <link rel="stylesheet" href="../style/standard.css">
